syntax = "proto3";

package proto;

option go_package = "../proto";

message ReqHead {
    uint32 version = 1; // 协议版本
    uint32 seq = 2; // 请求id
    string api = 3; // 请求接口名
    uint32 timeout = 4; // 超时时间
}

message RspHead {
    uint32 version = 1; // 协议版本
    uint32 seq = 2; // 请求id
    int32 ret = 3; // 接口返回值，0:成功；1～1000框架错误码；其它为业务错误码
    bytes msg = 4; // 接口返回值描述，可以是错误描述；也可以是其它
}

message RpcReq {
    ReqHead head = 1; // 协议头
    bytes body = 2; // 协议体
}

message RpcRsp {
    RspHead head = 1; // 协议头
    bytes body = 2; // 协议体
}
